objects/JunoDoc__Juno_Doc_Trigger__c/JunoDoc__Juno_Doc_Trigger__c.object-meta.xml
<CustomObject>
    <label>Juno Doc Trigger</label>
    <nameField>
        <label>Juno Doc Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Juno Doc Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>