objects/JunoDoc__Juno_Doc_Trigger__c/fields/JunoDoc__IsActive__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>