objects/JunoDoc__Juno_Doc_Trigger__c/fields/JunoDoc__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>