objects/JunoDoc__Juno_Doc_Trigger__c/fields/JunoDoc__Trigger_Conditions_Formula__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Trigger_Conditions_Formula__c</fullName>
    <label>Trigger Conditions Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>